[metadata]
name = gfort2py
description = Library for reading and plotting MESA data
long_description = file: README.md
author = Robert Farmer
license = GPLv2+
license_file = COPYING.txt
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research

[options]
python_requires = >=3.6
zip_safe = False
package_dir=
    =mesaPlot
packages=find:
install_requires = 
    numpy
    matplotlib
    scipy
    pandas
    pytest
    unittest

[options.packages.find]
where=mesaPlot

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
    unittest
