[metadata]
name = mesaPlot
description = Library for reading and plotting MESA data
long_description = file: README.md
long_description_content_type = text/markdown
author = Robert Farmer
author_email = robert.j.farmer37@gmail.com
license = GPLv2+
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/rjfarmer/mesaPlot
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research

[options]
python_requires = >=3.6
packages = find:
install_requires = 
    numpy
    matplotlib
    scipy
    pandas
    pytest

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
